// Vitest Snapshot v1

exports[`CdrText > default configuration > renders correctly 1`] = `
<p
  class="cdr-text"
>
  <!-- @slot CdrText content -->
  
  paragraph
  
</p>
`;

exports[`CdrText > with h1 set > renders correctly 1`] = `
<h1
  class="cdr-text"
>
  <!-- @slot CdrText content -->
  
  header
  
</h1>
`;
